# gnarlypi

./: .gitignore  LICENSE  Makefile  README.md  be_gnarly  display_config.sh  gnarly_rsync  gnarly_status_basic  gnarly_status_blinkt  gnarly_status_curses  gnarly_status_ledshim  gnarly_status_mini_pitft  gnarly_status_pitft  gnarlypi  gnarlypi.yml  installer.sh  package.json  pyproject.toml  requirements.txt  setenv.sh  start_displays.sh  test_status.py
docs/: TODO.md  alternatives.md  config.md  hardware_setup.md  the_software.md
libs/: basic_state.py  config.py  debug.py  locking.py  messaging.py  status.py
status/: gnarly_status_basic  gnarly_status_blinkt  gnarly_status_curses  gnarly_status_ledshim  gnarly_status_mini_pitft  gnarly_status_pitft  gnarly_status_web
status/web/static/: gnarly_status.js
status/web/templates/: index.html
tests/: photo_import.json  rsync.json  sample.json  test_mini_pitft.py  test_rsync  test_sample  test_status.py  test_steps.py
