# for production dependencies
# pip install .

# for devlopment dependencies
# pip install ".[dev]"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnarlypi"
version = "0.6.0"
description = "System to manage photos on a raspberry pi"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kevin Mulholland", email = "python@27escape.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]

dependencies = [
    "paho-mqtt==2.1.0",
    "dotwiz==0.4.0",
    "pyyaml==6.0.2",
    "lock==2018.3.25.2110",
    "fasteners==0.19",
    "ruamel.yaml==0.18.10",
    "psutil==7.0.0",
    "piexif==1.1.3",
    "flask==3.1.2",
    "flask-jwt-extended==4.7.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
]

[tool.setuptools.packages]
find = {}